feat: Se añade la autenticación con jwt a la API
Además, se añade una nueva ruta para que los clientes puedan acceder a sus assets y en consecuencia se actualiza la documentación de Open API. Issue #33
